# android_image_analysis_openCV

./: README.md  dekespo_opencv_imageAnalysis.apk
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/sample/dekespo/imageanalysisopencv/: ExampleInstrumentedTest.java
app/src/main/: .jniLibs.un~  AndroidManifest.xml
app/src/main/cpp/: CameraAnalysisControl.cpp  CameraAnalysisControl.h  functions.cpp  functions.h  helper_functions.cpp  helper_functions.h  native-lib.cpp
app/src/main/java/com/sample/dekespo/imageanalysisopencv/: ButtonTypes.java  CameraUIController.java  ColourTypeModes.java  Constants.java  MainActivity.java  ModeStatus.java  PhotoUIControllerActivity.java  SegmentationTypes.java  ThresholdTypeModes.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml  activity_photo_ui.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sample/dekespo/imageanalysisopencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
